#15 - Updating responses to a more unified way
